[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
log = "0.4.17"

[dependencies.eframe]
version = "0.19.0"
features = ["dark-light"]


[dependencies.simple_logger]
version = "2.3.0"
features = ["colors"]
